# html-diff-rs

./: Cargo.toml
src/: lib.rs  main.rs
test_files/: basic.stdout
