[package]
name = "html-diff"
version = "0.0.1"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

description = "Library detect HTML diffs"
repository = "https://github.com/GuillaumeGomez/html-diff-rs"
license = "MIT"

categories = ["html", "diff"]

[dependencies]
kuchiki = "0.4.3"
html5ever-atoms = "0.2.1"

[lib]
name = "html_diff"
crate_type = ["rlib", "dylib"]

[[bin]]
name = "html_diff"
